# prefgraph

./: .readthedocs.yaml  CHANGELOG.md  CLAUDE.md  README.md  bench_champion_vs_challenger.py  gen_menu_gifs.py  instacart_diagnostic_summary.md  pyproject.toml  report.md  setup.py  taobao_eda_report.md  taobao_salvage_report.md  tenrec_eda_facts.md  tenrec_robustness_check.md  tenrec_salvage_facts.md
.github/workflows/: docs.yml  release.yml  test-install.yml
_build/html/: index.html  searchindex.js
applications/: 01_grocery_scanner.py  02_llm_alignment.py  03_recommendation_clicks.py
benchmarks/: __init__.py  bench_1m_menu.py  bench_1m_users.py  bench_e2e_formats.py  bench_parquet_1m.py  e2e_rust_vs_python.py  generate_scaling_plots.py  multi_user_bench.py  overhead_analysis.py  r_validation.py  run_scaling.py  rust_vs_python.py  rust_vs_python_all_metrics.py
case_studies/benchmarks/: __init__.py  config.py  cv_benchmark.py  lasso_benchmark.py  runner.py
case_studies/datasets/: README.md
case_studies/dunnhumby/: README.md  __init__.py  advanced_analysis.py  comprehensive_analysis.py  config.py  data_loader.py  download_data.sh  encoder_analysis.py  extended_analysis.py  lancaster_analysis.py  new_algorithms_analysis.py  predictive_analysis.py  price_oracle.py  run_all.py  run_analysis.py  session_builder.py  test_results.py  visualize_results.py
case_studies/finn_slates/: generate_hero.py  generate_user_graphs.py  run_analysis.py
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
docs/: algorithms.rst  api.rst  app_grocery.rst  app_llm_alignment.rst  app_recsys.rst  applications.rst  benchmarks.rst  benchmarks_ecommerce.rst  case_study.rst  conf.py  ecommerce_benchmarking.md  examples.rst  generate_app_figures.py  generate_doc_gifs.py  generate_front_page_plots.py  implementation_status.md  index.rst  install.rst  installation.rst  papers.rst  performance.rst  quickstart.rst  references.rst  requirements.txt  scaling.md  scaling.rst  theory.rst  theory_foundations.rst  theory_landscape.rst  theory_structure.rst  troubleshooting.rst  validation.rst
docs/_static/: custom.css
docs/budget/: app_grocery.rst  app_llm_alignment.rst  app_llm_benchmark.rst  examples.rst  index.rst  theory_advanced.rst  theory_consistency.rst  theory_efficiency.rst  theory_foundations.rst  theory_structure.rst  tutorial.rst  tutorial_budget_advanced.rst  tutorial_demand_analysis.rst  tutorial_ecommerce.rst  tutorial_uber_eats.rst  tutorial_welfare.rst
docs/intertemporal/: examples.rst  index.rst  tutorial_intertemporal.rst
docs/menu/: app_finn_slates.rst  app_recsys.rst  examples.rst  index.rst  theory_abstract.rst  tutorial_attention.rst  tutorial_context_effects.rst  tutorial_menu_choice.rst  tutorial_ranking.rst  tutorial_risk.rst  tutorial_stochastic.rst
docs/perf/: budgets_demo.csv  menus_demo.csv
docs/production/: examples.rst  index.rst  tutorial_production.rst
examples/applications/: 01_grocery_scanner.py  02_llm_alignment.py  03_recommendation_clicks.py
examples/contrib/: 03_risk_analysis.py  04_spatial_preferences.py  06_characteristics_model.py
examples/eda/: DUNNHUMBY_EDA_V2_FIXES.md  DUNNHUMBY_STRESS_TEST_REPORT.md  DUNNHUMBY_VALIDATION_RESULTS.md  dunnhumby_eda_validation_checks.py  dunnhumby_stress_eda_v2_conservative.py  taobao_eda.py  taobao_salvage_audit.py  tenrec_eda.py  tenrec_salvage.py
examples/notebooks/: 01_behavioral_auditor.ipynb  01_getting_started.ipynb  02_bot_hunter.ipynb  02_preference_encoder.ipynb  03_account_sharing.ipynb  03_risk_analysis.ipynb  04_spatial_preferences.ipynb  04_ui_detective.ipynb  05_advanced_features.ipynb  06_characteristics_model.ipynb  e2e_pypi_test.ipynb
examples/quickstart/: 01_behavioral_auditor.py  01_quick_start.py  02_preference_encoder.py  02_scale_scoring.py  03_menu_choices.py  05_advanced_features.py  07_uber_eats_scale.py
examples/scripts/: analyze_prest_data.py
examples/tutorials/: 01_basic_workflow.ipynb  02_real_data_analysis.ipynb  03_preference_structure.ipynb
references/chapters_text/: Chapter_10_Game_Theory.txt  Chapter_11_Social_Choice_and_Political_Science.txt  Chapter_12_Revealed_Preference_and_Systems_of.txt  Chapter_13_Revealed_Preference_and_Model_Theory.txt  Chapter_1_Mathematical_Preliminaries.txt  Chapter_2_Classical_Abstract_Choice_Theory.txt  Chapter_3_Rational_Demand.txt  Chapter_4_Topics_in_Rational_Demand.txt  Chapter_5_Practical_Issues_in_Revealed.txt  Chapter_6_Production.txt  Chapter_7_Stochastic_Choice.txt  Chapter_8_Choice_Under_Uncertainty.txt  Chapter_9_General_Equilibrium_Theory.txt
references/papers/: download_list.md
references/papers_text/: 2019 Ian Crawford mini course.txt  Beatty-DemandingRevealedPreference-2011.txt  Bronars-PowerNonparametricTests-1987.txt
rust/crates/rpt-core/: Cargo.toml
rust/crates/rpt-core/src/: additive.rs  attention.rs  ccei.rs  closure.rs  gapp.rs  garp.rs  graph.rs  harp.rs  houtman_maks.rs  intertemporal.rs  lib.rs  lp.rs  menu.rs  mpi.rs  production.rs  separability.rs  variants.rs  vei.rs  welfare.rs
rust/crates/rpt-python/: Cargo.toml
rust/crates/rpt-python/src/: batch.rs  generators.rs  lib.rs  parquet_reader.rs
src/prefgraph/: __init__.py  _kernels.py  _rust_backend.py  analyze.py  auditor.py  encoder.py  engine.py  lancaster.py
src/pyrevealed/: __init__.py  _rust_backend.py  analyze.py  engine.py
tests/: conftest.py  test_analyze.py  test_attention_new.py  test_backend_parity.py  test_diagnostics.py  test_engine_ux.py  test_generators.py  test_panel.py  test_parquet_io.py  test_parquet_rust.py  test_phase3_stress.py  test_power_analysis.py  test_result_summary.py  test_reviewer_cases.py  test_rich_summary.py  test_scc_benchmarks.py  test_stochastic_new.py
tests/evals/: __init__.py  conftest.py  test_aei_convergence.py  test_attention_limits.py  test_division_hazards.py  (+15 more)
tools/: generate_consistency_gif.py  generate_floyd_warshall_gif.py  generate_garp_violation_gif.py  generate_scc_tarjan_gif.py  speed_up_gifs.py  split_pdf.py  transcribe_pdf.py
(+229 files in other folders)
