[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyrevealed"
version = "0.4.2"
description = "Behavioral Signal Analysis for User Understanding - Detect bots, shared accounts, and UI confusion"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "PyRevealed Contributors"}
]
keywords = [
    "bot-detection",
    "fraud-detection",
    "behavioral-analysis",
    "user-analytics",
    "anomaly-detection",
    "consistency-check",
    "revealed-preference",
    "machine-learning"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Typing :: Typed"
]
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "networkx>=3.0",
    "numba>=0.58.0",
]

[project.optional-dependencies]
viz = [
    "matplotlib>=3.7.0",
]
notebooks = [
    "jupyter>=1.0.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
]
datasets = [
    "pandas>=2.0.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
]
docs = [
    "sphinx>=7.0",
    "pydata-sphinx-theme>=0.14",
    "sphinx-autodoc-typehints>=1.25",
    "sphinx-copybutton>=0.5",
]
all = [
    "pyrevealed[dev,viz,notebooks,docs]"
]

[project.urls]
Homepage = "https://github.com/rawatpranjal/PyRevealed"
Documentation = "https://pyrevealed.readthedocs.io"
Repository = "https://github.com/rawatpranjal/PyRevealed"

[tool.hatch.build.targets.wheel]
packages = ["src/pyrevealed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=pyrevealed --cov-report=term-missing"
# Exclude source directory from test collection (functions like test_warp_la are not tests)
norecursedirs = ["src", "build", "dist", ".git", "papers", "dunnhumby"]
# Only collect test functions that are in test files (not source API functions)
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
line-length = 88
target-version = "py310"
