[build-system]
requires = ["setuptools>=68.0", "setuptools-rust>=1.8"]
build-backend = "setuptools.build_meta"

[project]
name = "pyrevealed"
version = "0.5.3"
description = "Revealed preference analysis at scale — rationality scores, efficiency indices, and utility recovery. Rust engine, Python interface."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "PyRevealed Contributors"}
]
keywords = [
    "revealed-preference",
    "economics",
    "rationality",
    "garp",
    "ccei",
    "utility-maximization",
    "choice-theory",
    "econometrics",
    "datasets",
    "benchmark"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Typing :: Typed"
]
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "networkx>=3.0",
    "numba>=0.58.0",
]

[project.optional-dependencies]
viz = [
    "matplotlib>=3.7.0",
]
notebooks = [
    "jupyter>=1.0.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
]
datasets = [
    "pandas>=2.0.0",
]
parquet = [
    "pyarrow>=14.0.0",
    "pandas>=2.0.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
]
docs = [
    "sphinx>=7.0",
    "pydata-sphinx-theme>=0.14",
    "sphinx-autodoc-typehints>=1.25",
    "sphinx-copybutton>=0.5",
]
benchmarks = [
    "pandas>=2.0.0",
    "lightgbm>=4.0.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
]
all = [
    "pyrevealed[dev,viz,notebooks,docs,parquet]"
]

[project.urls]
Homepage = "https://pyrevealed.readthedocs.io"
Documentation = "https://pyrevealed.readthedocs.io"
Repository = "https://github.com/rawatpranjal/PyRevealed"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pyrevealed = ["py.typed"]

[tool.maturin]
python-source = "src"
module-name = "pyrevealed._rust_core"
manifest-path = "rust/crates/rpt-python/Cargo.toml"
features = ["pyo3/extension-module", "parquet"]
include = ["LICENSE"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=pyrevealed --cov-report=term-missing"
# Exclude source directory from test collection (functions like test_warp_la are not tests)
norecursedirs = ["src", "build", "dist", ".git", "references", "case_studies", "tests/simulations"]
# Only collect test functions that are in test files (not source API functions)
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
line-length = 88
target-version = "py310"
